--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,11 @@ spring: # 운영 환경
       ddl-auto: create
     properties:
       hibernate:
+        # IN절 파라미터 개수
+        default_batch_fetch_size : 16
         format_sql: true
 
 logging.level:
   org.hibernate.SQL: debug
+
+decorator.datasource.p6spy.enable-logging: true
